# cglm-playground

./: .clang-format  CMakeLists.txt  main.c
